--- a/examples.html
+++ b/examples.html
@@ -188,7 +188,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/entelecheia/.lecture/main?urlpath=tree/book/examples.md"
+        <a href="https://mybinder.org/v2/gh/entelecheia/lecture/main?urlpath=tree/book/examples.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -231,7 +231,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://github.com/entelecheia/.lecture"
+        <a href="https://github.com/entelecheia/lecture"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -248,7 +248,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://github.com/entelecheia/.lecture/issues/new?title=Issue%20on%20page%20%2Fexamples.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/entelecheia/lecture/issues/new?title=Issue%20on%20page%20%2Fexamples.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
