--- a/usage.html
+++ b/usage.html
@@ -203,7 +203,7 @@ title="Fullscreen mode"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://github.com/entelecheia/.lecture"
+        <a href="https://github.com/entelecheia/lecture"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -220,7 +220,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://github.com/entelecheia/.lecture/issues/new?title=Issue%20on%20page%20%2Fusage.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/entelecheia/lecture/issues/new?title=Issue%20on%20page%20%2Fusage.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
