deploy: 32febaf3e87563e026f1ac6605d96743df8589fb

--- a/lectures/aiart/intro.html
+++ b/lectures/aiart/intro.html
@@ -703,7 +703,9 @@ title="Print to PDF"
         ></iframe>
         </div></div>
 </div>
-<ul class="simple">
+<div class="video_wrapper" style="">
+<iframe allowfullscreen="true" src="https://www.youtube.com/embed/Noe5-awlbfw" style="border: 0; height: 435px; width: 720px">
+</iframe></div><ul class="simple">
 <li><p>040502 is a 2004 painting of pigment on paper by the robotic, artificially intelligent painter AARON</p></li>
 </ul>
 <p><img alt="araron" src="../../_images/aiart_1_040502.jpg" /></p>
