deploy: 1fced51fca0474b8865c815f43d177cf5999f051

--- a/lectures/mlops/dotfiles.html
+++ b/lectures/mlops/dotfiles.html
@@ -441,7 +441,7 @@ touch<span class="w"> </span>run_once_install-packages.sh
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
