--- a/lectures/aiart/intro.html
+++ b/lectures/aiart/intro.html
@@ -457,7 +457,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
