--- a/lectures/aiart/news.html
+++ b/lectures/aiart/news.html
@@ -390,7 +390,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
