--- a/lectures/aiart/project-themes.html
+++ b/lectures/aiart/project-themes.html
@@ -472,7 +472,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
