--- a/lectures/aiart/robot_drawings.html
+++ b/lectures/aiart/robot_drawings.html
@@ -753,7 +753,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
