--- a/lectures/mlops/dev-env.html
+++ b/lectures/mlops/dev-env.html
@@ -416,7 +416,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
