--- a/lectures/mlops/devops.html
+++ b/lectures/mlops/devops.html
@@ -377,7 +377,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
