--- a/lectures/mlops/grafana.html
+++ b/lectures/mlops/grafana.html
@@ -381,7 +381,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
