--- a/lectures/mlops/intro.html
+++ b/lectures/mlops/intro.html
@@ -580,7 +580,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
