--- a/lectures/nlp_advances/index.html
+++ b/lectures/nlp_advances/index.html
@@ -541,7 +541,7 @@ document.write(`
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "entelecheia/lecture",
             ref: "master",
         },
         codeMirrorConfig: {
