deploy: 42e799eb5e2daab4c929a55f85e9a44946f5aab8

--- a/lectures/nlp_deep/lab3-train-tokenizers.html
+++ b/lectures/nlp_deep/lab3-train-tokenizers.html
@@ -82,6 +82,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <script crossorigin="anonymous" data-jupyter-widgets-cdn="https://cdn.jsdelivr.net/npm/" src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.0/dist/embed-amd.js"></script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/nlp_deep/lab3-train-tokenizers';</script>
+    <link rel="shortcut icon" href="../../_static/favicon.png"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Lab 4: Pretraining Language Models" href="lab4-pretraining-lms.html" />
