deploy: 06529bd2982a8214b5fee68bd5db198d4d341d01

--- a/search.html
+++ b/search.html
@@ -417,6 +417,13 @@ By <a href="https://entelecheia.me">Young Joon Lee</a>
   
   <div class="footer-item">
     
+<div class="extra_footer">
+  <div>
+  <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
+  <button id="ask-button">Ask a question</button>
+</div>
+
+</div>
   </div>
   
 </div></div>
