deploy: fadb0430e0a7800ad418c56133645d19f1248727

--- a/about/index.html
+++ b/about/index.html
@@ -460,6 +460,10 @@ document.write(`
 <span class="label"><span class="fn-bracket">[</span>HSST21<span class="fn-bracket">]</span></span>
 <p>Tarek Alexander Hassan, Jesse Schreger, Markus Schwedeler, and Ahmed Tahoun. Sources and transmission of country risk. Technical Report, National Bureau of Economic Research, 2021.</p>
 </div>
+<div class="citation" id="id46" role="doc-biblioentry">
+<span class="label"><span class="fn-bracket">[</span>HP16<span class="fn-bracket">]</span></span>
+<p>Gerard Hoberg and Gordon Phillips. Text-based network industries and endogenous product differentiation. <em>Journal of Political Economy</em>, 124(5):1423–1465, 2016.</p>
+</div>
 <div class="citation" id="id34" role="doc-biblioentry">
 <span class="label"><span class="fn-bracket">[</span>HBC+21<span class="fn-bracket">]</span></span>
 <p>Aidan Hogan, Eva Blomqvist, Michael Cochez, Claudia d’Amato, Gerard de Melo, Claudio Gutierrez, Sabrina Kirrane, José Emilio Labra Gayo, Roberto Navigli, Sebastian Neumaier, and others. Knowledge graphs. <em>ACM Computing Surveys (CSUR)</em>, 54(4):1–37, 2021.</p>
