deploy: 43dc68925c9ba002fd66f830b14025f2c248094a

--- a/about/index.html
+++ b/about/index.html
@@ -420,6 +420,10 @@ document.write(`
 <span class="label"><span class="fn-bracket">[</span>BWT21<span class="fn-bracket">]</span></span>
 <p>Gedas Bertasius, Heng Wang, and Lorenzo Torresani. Is space-time attention all you need for video understanding? In <em>ICML</em>, volume 2, 4. 2021.</p>
 </div>
+<div class="citation" id="id48" role="doc-biblioentry">
+<span class="label"><span class="fn-bracket">[</span>BHK+21<span class="fn-bracket">]</span></span>
+<p>Nicholas Bloom, Tarek Alexander Hassan, Aakash Kalyani, Josh Lerner, and Ahmed Tahoun. The diffusion of disruptive technologies. Technical Report, National Bureau of Economic Research, 2021.</p>
+</div>
 <div class="citation" id="id40" role="doc-biblioentry">
 <span class="label"><span class="fn-bracket">[</span>Bod17<span class="fn-bracket">]</span></span>
 <p>Paula Boddington. <em>Towards a code of ethics for artificial intelligence</em>. Springer, 2017.</p>
