--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - ἐντελέχεια</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - ἐντελέχεια.άι</title>
   
   
   
@@ -163,7 +163,7 @@ const thebe_selector_output = ".output, .cell_output"
   
   
   
-    <p class="title logo__title">ἐντελέχεια</p>
+    <p class="title logo__title">ἐντελέχεια.άι</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
