--- a/lectures/nlp_intro/language_models.html
+++ b/lectures/nlp_intro/language_models.html
@@ -595,7 +595,7 @@ P(\text{먹습니다}|\text{저는 김치를}) \approx P(\text{먹습니다}|\te
 <p>To estimate the joint probability of an entire sequence of words, such as “The cat sat on the mat”, we can decompose this probability using the chain rule of probability:</p>
 <div class="math notranslate nohighlight">
 \[
-P(w_1:n) = P(w_1)P(w_2|w_1)P(w_3|w_1:2)...P(w_n|w_1:n−1) = \prod_{k=1}^n P(w_k|w_1:k−1)
+P(w_{1:n}) = P(w_1)P(w_2|w_1)P(w_3|w_{1:2})...P(w_n|w_{1:n−1}) = \prod_{k=1}^n P(w_k|w_{1:k−1})
 \]</div>
 <p>This decomposition shows the link between computing the joint probability of a sequence and computing the conditional probability of a word given previous words. However, it doesn’t really seem to help us! Computing the exact probability of a word given a long sequence of preceding words (e.g., P(wn|w1:n−1)) is challenging because language is creative, and any particular context might have never occurred before.</p>
 </section>
@@ -614,17 +614,17 @@ P(\text{The, cat, sat, on, the, mat}) = P(\text{The})P(\text{cat}|\text{The})P(\
 <p>For a bigram model (N=2), the approximation is:</p>
 <div class="math notranslate nohighlight">
 \[
-P(w_n|w_1:n−1) ≈ P(w_n|w_{n−1})
+P(w_n|w_{1:n−1}) ≈ P(w_n|w_{n−1})
 \]</div>
 <p>For an n-gram model with size N, the approximation is:</p>
 <div class="math notranslate nohighlight">
 \[
-P(w_n|w_1:n−1) ≈ P(w_n|w_{n−N+1:n−1})
+P(w_n|w_{1:n−1}) ≈ P(w_n|w_{n−N+1:n−1})
 \]</div>
 <p>Given the n-gram assumption for the probability of an individual word, we can compute the probability of a complete word sequence as:</p>
 <div class="math notranslate nohighlight">
 \[
-P(w_1:n) ≈ \prod_{k=1}^n P(w_k|w_{k−N+1:k−1})
+P(w_{1:n}) ≈ \prod_{k=1}^n P(w_k|w_{k−N+1:k−1})
 \]</div>
 <p><strong>Example</strong></p>
 <p>For the trigram model (N=3), the approximation for the sequence “The cat sat on the mat” is:</p>
