--- a/lectures/mlops/kubernetes.html
+++ b/lectures/mlops/kubernetes.html
@@ -139,7 +139,7 @@ const thebe_selector_output = ".output, .cell_output"
   <div class="bd-header-announcement container-fluid bd-header-announcement">
     <div class="bd-header-announcement__content"><p>
   <strong>Announcement:</strong>
-  You can install the accompanying AI tutor <a href="https://github.com/entelecheia/entelecheia-lecture-bot">here</a>.
+  You can install the accompanying AI tutor <a href="https://chrome.google.com/webstore/detail/lecturebot-for-%E1%BC%90%CE%BD%CF%84%CE%B5%CE%BB%CE%AD%CF%87%CE%B5%CE%B9%CE%B1/lfgfgbomindbccgidgalhhndggddpagd">here</a>.
 </p>
 </div>
   </div>
