deploy: 3ff6508c2a185031f2d06cf0dde56c5716192a08

--- a/lectures/nlp_advances/thesis.html
+++ b/lectures/nlp_advances/thesis.html
@@ -468,7 +468,7 @@ document.write(`
 </ol>
 </li>
 </ul>
-<p>IV. Developing a Research Methodology</p>
+<p><strong>IV. Developing a Research Methodology</strong></p>
 <ul class="simple">
 <li><p>A. The significance of a well-defined methodology</p></li>
 <li><p>B. Types of AI research methodologies</p>
@@ -486,7 +486,7 @@ document.write(`
 </ol>
 </li>
 </ul>
-<p>V. Implementing the Research</p>
+<p><strong>V. Implementing the Research</strong></p>
 <ul class="simple">
 <li><p>A. Data collection and preprocessing</p>
 <ol class="arabic simple">
@@ -514,7 +514,7 @@ document.write(`
 </ol>
 </li>
 </ul>
-<p>VI. Writing the Thesis</p>
+<p><strong>VI. Writing the Thesis</strong></p>
 <ul class="simple">
 <li><p>A. The structure of a thesis</p>
 <ol class="arabic simple">
@@ -542,7 +542,7 @@ document.write(`
 </ol>
 </li>
 </ul>
-<p>VII. Conclusion</p>
+<p><strong>VII. Conclusion</strong></p>
 <ul class="simple">
 <li><p>A. The significance of a well-executed AI thesis</p></li>
 <li><p>B. Potential impact on the field and future research</p></li>
