deploy: d947fae902e78ad4a36d1abed3b658f3a374ab34

--- a/lectures/mlops/intro.html
+++ b/lectures/mlops/intro.html
@@ -443,8 +443,8 @@ document.write(`
 <p>The design process typically involves several stages, such as collecting and preparing data, selecting relevant features, training and validating the model, and integrating it into the broader system or application. Additionally, monitoring and maintenance are essential to ensure that the machine learning system continues to perform accurately and efficiently over time.</p>
 <p>MLOps, or Machine Learning Operations, is a related field that applies DevOps principles to machine learning systems. MLOps focuses on developing a software architecture that can handle the complexity and scalability of machine learning models, managing data, and infrastructure required for training and deploying models, and automating processes to improve efficiency and reliability.</p>
 <p>Machine learning systems design and MLOps are critical to ensuring the success of machine learning projects, improving the accuracy and efficiency of models, and delivering value to users and customers.</p>
-<div class="mermaid">
-            graph LR
+<div align="center" class="mermaid align-center">
+            graph TD
 A[1. Data Collection] --&gt; B[2. Data Preparation]
 B --&gt; C[3. Feature Selection]
 C --&gt; D[4. Model Training]
@@ -460,7 +460,8 @@ style D fill:#c83349
 style E fill:#5b9aa0
 style F fill:#d6e4aa
 style G fill:#c9a690
-        </div><p>In summary, this chapter covers the following topics:</p>
+        </div>
+        <p>In summary, this chapter covers the following topics:</p>
 <ul class="simple">
 <li><p>Machine learning systems design involves creating and implementing machine learning models and algorithms to solve real-world problems.</p></li>
 <li><p>The design process includes defining software architecture, selecting algorithms, and designing infrastructure to meet specific requirements.</p></li>
