--- a/lectures/ds/index.html
+++ b/lectures/ds/index.html
@@ -94,7 +94,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="LectureBot for ἐντελέχεια.άι" href="../../about/lecture-bot.html" />
-    <link rel="prev" title="Unix Password Managers" href="../mlops/pass.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="../mlops/docker.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -449,12 +449,12 @@ document.write(`
                   <!-- Previous / next buttons -->
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../mlops/pass.html"
+       href="../mlops/docker.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Unix Password Managers</p>
+        <p class="prev-next-title">&lt;no title&gt;</p>
       </div>
     </a>
     <a class="right-next"
