--- a/lectures/mlops/pass.html
+++ b/lectures/mlops/pass.html
@@ -93,7 +93,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="shortcut icon" href="../../_static/favicon.png"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Data Science for Economics and Finance" href="../ds/index.html" />
+    <link rel="next" title="&lt;no title&gt;" href="docker.html" />
     <link rel="prev" title="Github’s Fork &amp; Pull Workflow" href="github.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -683,11 +683,11 @@ passage &quot;${@}&quot; &quot;$name&quot;
       </div>
     </a>
     <a class="right-next"
-       href="../ds/index.html"
+       href="docker.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Data Science for Economics and Finance</p>
+        <p class="prev-next-title">&lt;no title&gt;</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
