deploy: 43071a2884ed305b6f084057bef366b5c27dafbd

--- a/lectures/aiart/imagen.html
+++ b/lectures/aiart/imagen.html
@@ -881,7 +881,7 @@ The text-encoder is frozen during training, meaning that it does not learn or 
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
