--- a/lectures/mlops/containerization/index.html
+++ b/lectures/mlops/containerization/index.html
@@ -1008,7 +1008,7 @@ The <code class="docutils literal notranslate"><span class="pre">dk-compose</spa
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
