--- a/lectures/mlops/dotfiles/age-gpg-ssh.html
+++ b/lectures/mlops/dotfiles/age-gpg-ssh.html
@@ -851,7 +851,7 @@ git<span class="w"> </span>tag<span class="w"> </span>-s<span class="w"> </span>
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
