--- a/lectures/mlops/dotfiles/index.html
+++ b/lectures/mlops/dotfiles/index.html
@@ -752,7 +752,7 @@ sh<span class="w"> </span>-c<span class="w"> </span><span class="s2">&quot;</spa
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
