--- a/lectures/mlops/dotfiles/pass.html
+++ b/lectures/mlops/dotfiles/pass.html
@@ -995,7 +995,7 @@ passage<span class="w"> </span><span class="s2">&quot;</span><span class="si">${
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
