--- a/lectures/nlp_deep/bert/bertviz.html
+++ b/lectures/nlp_deep/bert/bertviz.html
@@ -1266,7 +1266,7 @@ requirejs(['jquery', 'd3'], function ($, d3) {
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
