--- a/lectures/nlp_deep/bert/index.html
+++ b/lectures/nlp_deep/bert/index.html
@@ -790,7 +790,7 @@ A[Input: the cat ran] --&gt; B[Attention Weights: 0.1, 0.8, 0.1] --&gt; C[Output
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
