--- a/lectures/nlp_deep/decoding.html
+++ b/lectures/nlp_deep/decoding.html
@@ -1111,7 +1111,7 @@ Another way to learn Deep Learning is by coding. For example, I often code to so
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
