--- a/lectures/nlp_deep/intro.html
+++ b/lectures/nlp_deep/intro.html
@@ -1150,7 +1150,7 @@ English: 258.83 GiB, Korean: 190.04 GiB, Total: 448.87 GiB</p>
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
