--- a/lectures/nlp_deep/lab4-pretraining-lms.html
+++ b/lectures/nlp_deep/lab4-pretraining-lms.html
@@ -1831,7 +1831,7 @@ time: 339 ms (started: 2022-11-24 23:45:48 +00:00)
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
