--- a/lectures/nlp_deep/sentencepiece.html
+++ b/lectures/nlp_deep/sentencepiece.html
@@ -1347,7 +1347,7 @@ EM iter 4: Loss=-640155.71
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
