--- a/lectures/nlp_deep/zeroshot.html
+++ b/lectures/nlp_deep/zeroshot.html
@@ -874,7 +874,7 @@ If your task is similar to the task the model of the checkpoint was trained on, 
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
