--- a/lectures/nlp_intro/lab2-corpus-eda.html
+++ b/lectures/nlp_intro/lab2-corpus-eda.html
@@ -1449,7 +1449,7 @@ time: 5.84 ms (started: 2022-11-04 07:06:03 +00:00)
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
