--- a/lectures/nlp_intro/lab4-tomotopy.html
+++ b/lectures/nlp_intro/lab4-tomotopy.html
@@ -2441,7 +2441,7 @@ inc	0.020155129954218864
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
