--- a/lectures/nlp_intro/language_models.html
+++ b/lectures/nlp_intro/language_models.html
@@ -1305,7 +1305,7 @@ PP(W) = 2^H(W)
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
