--- a/lectures/nlp_intro/tokenization.html
+++ b/lectures/nlp_intro/tokenization.html
@@ -1806,7 +1806,7 @@ context =&gt; NOUN =&gt; NN
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
