--- a/lectures/nlp_intro/topic_coherence.html
+++ b/lectures/nlp_intro/topic_coherence.html
@@ -1009,7 +1009,7 @@ It consists of three components:</p>
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
