--- a/lectures/nlp_intro/topic_modeling.html
+++ b/lectures/nlp_intro/topic_modeling.html
@@ -1410,7 +1410,7 @@ Wall time: 5.91 s
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
