--- a/lectures/nlp_intro/word_embeddings.html
+++ b/lectures/nlp_intro/word_embeddings.html
@@ -1876,7 +1876,7 @@ Prediction: micron
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
