--- a/lectures/nlp_intro/word_segmentation.html
+++ b/lectures/nlp_intro/word_segmentation.html
@@ -1401,7 +1401,7 @@ Top 10 subwords: [(&#39;▁&#39;, 26177132), (&#39;e&#39;, 7246161), (&#39;t&#39
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
