--- a/lectures/mlops/containerization/containerd.html
+++ b/lectures/mlops/containerization/containerd.html
@@ -785,7 +785,7 @@ sudo<span class="w"> </span>yum<span class="w"> </span>install<span class="w"> <
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
