--- a/lectures/mlops/devops/gitops.html
+++ b/lectures/mlops/devops/gitops.html
@@ -821,7 +821,7 @@ sudo<span class="w"> </span>apt-get<span class="w"> </span>install<span class="w
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
