--- a/lectures/mlops/dotfiles/dotdrop.html
+++ b/lectures/mlops/dotfiles/dotdrop.html
@@ -643,7 +643,7 @@ Execute the <code class="docutils literal notranslate"><span class="pre">dotfile
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
