--- a/lectures/mlops/github/index.html
+++ b/lectures/mlops/github/index.html
@@ -639,7 +639,7 @@ git<span class="w"> </span>commit<span class="w"> </span>-m<span class="w"> </sp
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
