--- a/lectures/mlops/intro.html
+++ b/lectures/mlops/intro.html
@@ -814,7 +814,7 @@ style G fill:#c9a690
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
