--- a/lectures/nlp_advances/sam/index.html
+++ b/lectures/nlp_advances/sam/index.html
@@ -718,7 +718,7 @@ document.write(`
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
