--- a/lectures/nlp_deep/transformers.html
+++ b/lectures/nlp_deep/transformers.html
@@ -967,7 +967,7 @@ document.write(`
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
