--- a/lectures/nlp_intro/lab1-corpus.html
+++ b/lectures/nlp_intro/lab1-corpus.html
@@ -2738,7 +2738,7 @@ INFO:ekorpkit.info.column:Added a column [corpus] with value [bnwiki]
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
