--- a/lectures/nlp_intro/sentiments.html
+++ b/lectures/nlp_intro/sentiments.html
@@ -1400,7 +1400,7 @@ weighted avg       0.66      0.64      0.62      2000
   <div class="footer-item">
     
 <p class="component-author">
-By <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+By <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 </p>
 
   </div>
