--- a/lectures/mlops/containerization/containerd.html
+++ b/lectures/mlops/containerization/containerd.html
@@ -90,7 +90,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script>mermaid.initialize({startOnLoad:true});</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/mlops/containerization/containerd';</script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/lectures/mlops/containerization/containerd.html" />
-    <link rel="shortcut icon" href="../../../_static/favicon.png"/>
+    <link rel="shortcut icon" href="../../../_static/favicon-v2-circle.png"/>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="Simple MLOps Pipeline" href="../simple-pipeline/index.html" />
