--- a/lectures/nlp_deep/lab1-corpus.html
+++ b/lectures/nlp_deep/lab1-corpus.html
@@ -90,7 +90,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script>mermaid.initialize({startOnLoad:true});</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/nlp_deep/lab1-corpus';</script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/lectures/nlp_deep/lab1-corpus.html" />
-    <link rel="shortcut icon" href="../../_static/favicon.png"/>
+    <link rel="shortcut icon" href="../../_static/favicon-v2-circle.png"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Lab 3: Training Tokenizers" href="lab3-train-tokenizers.html" />
