--- a/lectures/nlp_intro/ekorpkit.html
+++ b/lectures/nlp_intro/ekorpkit.html
@@ -93,7 +93,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script>mermaid.initialize({startOnLoad:true});</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/nlp_intro/ekorpkit';</script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/lectures/nlp_intro/ekorpkit.html" />
-    <link rel="shortcut icon" href="../../_static/favicon.png"/>
+    <link rel="shortcut icon" href="../../_static/favicon-v2-circle.png"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Lab 1: Preparing Wikipedia Corpora" href="lab1-corpus.html" />
