--- a/search.html
+++ b/search.html
@@ -91,7 +91,7 @@ const thebe_selector_output = ".output, .cell_output"
   <script src="_static/language_data.js"></script>
   <script src="searchindex.js"></script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/search.html" />
-    <link rel="shortcut icon" href="_static/favicon.png"/>
+    <link rel="shortcut icon" href="_static/favicon-v2-circle.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
