deploy: 7fe43fc7482cea1cdcbc4083cab9c9c3fcc99035

--- a/lectures/nlp_intro/topic/coherence.html
+++ b/lectures/nlp_intro/topic/coherence.html
@@ -535,7 +535,7 @@ S = \{(W^{\prime}, W^*) | W^{\prime}, W^* \subseteq W\}
 <p>Segmentation can be understood as the method we use to combine words in a topic before evaluating their relationships.</p>
 <p>For instance, the S-one-one segmentation requires the creation of pairs of distinct words. If <span class="math notranslate nohighlight">\(W = \{w_1, w_2, \dots, w_n\}\)</span>, then the S-one-one segmentation generates the following pairs:</p>
 <div class="math notranslate nohighlight">
-\[ S = \{(w*1, w_2), (w_1, w_3), \dots, (w_1, w_n), (w_2, w_3), \dots, (w_2, w_n), \dots, (w*{n-1}, w_n)\} \]</div>
+\[ S = \{(w_1, w_2), (w_1, w_3), \dots, (w_1, w_n), (w_2, w_3), \dots, (w_2, w_n), \dots, (w*{n-1}, w_n)\} \]</div>
 <p>By using this approach, our model computes the final coherence score based on the relationship between each word in the topic and the other words in the topic.</p>
 <p>Another example is the S-one-all segmentation, which entails creating pairs of each word with all other words. Applying it to <span class="math notranslate nohighlight">\(W\)</span> yields the following pairs:</p>
 <div class="math notranslate nohighlight">
