deploy: 218e19e7c6c7f4844a26c55c69cfa53afdafd08c

--- a/lectures/nlp_intro/topic/coherence.html
+++ b/lectures/nlp_intro/topic/coherence.html
@@ -539,7 +539,7 @@ S = \{(W^{\prime}, W^*) | W^{\prime}, W^* \subseteq W\}
 <p>By using this approach, our model computes the final coherence score based on the relationship between each word in the topic and the other words in the topic.</p>
 <p>Another example is the S-one-all segmentation, which entails creating pairs of each word with all other words. Applying it to <span class="math notranslate nohighlight">\(W\)</span> yields the following pairs:</p>
 <div class="math notranslate nohighlight">
-\[ S = \{(\{w*1\}, \{w_2, w_3, \dots, w_n\}), (\{w_2\}, \{w_1, w_3, \dots, w_n\}), \dots, (\{w_n\}, \{w_1, w_2, \dots, w*{n-1}\})\} \]</div>
+\[ S = \{(\{w_1\}, \{w_2, w_3, \dots, w_n\}), (\{w_2\}, \{w_1, w_3, \dots, w_n\}), \dots, (\{w_n\}, \{w_1, w_2, \dots, w*{n-1}\})\} \]</div>
 <p>By using this approach, our model computes the final coherence score based on the relationship between each word in the topic and all the other words in the topic. This way, the segmentation step allows us to choose different strategies to investigate the coherence of a given topic.</p>
 </section>
 <section id="probability-calculation">
