deploy: 5078ec0de004d8ba475f088af06bfbf694a0a49e

--- a/lectures/nlp_deep/transformers/bert.html
+++ b/lectures/nlp_deep/transformers/bert.html
@@ -90,7 +90,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script>mermaid.initialize({startOnLoad:true});</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/nlp_deep/transformers/bert';</script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/lectures/nlp_deep/transformers/bert.html" />
-    <link rel="shortcut icon" href="../../../_static/favicon-v2-circle.png"/>
+    <link rel="shortcut icon" href="https://assets.entelecheia.ai/favicon.png"/>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="BERT: Visualizing Attention" href="bertviz.html" />
