--- a/lectures/aiart/dalle2.html
+++ b/lectures/aiart/dalle2.html
@@ -90,7 +90,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script>mermaid.initialize({startOnLoad:true});</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'lectures/aiart/dalle2';</script>
     <link rel="canonical" href="https://lecture.entelecheia.ai/lectures/aiart/dalle2.html" />
-    <link rel="shortcut icon" href="../../_static/favicon-v2-circle.png"/>
+    <link rel="shortcut icon" href="https://assets.entelecheia.ai/favicon.png"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Imagen" href="imagen.html" />
